<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/sNursePicIV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/imageview"
            android:src="@drawable/noperson"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/sNurseNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/marcello_genigaro"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/sNursePicIV"
            app:layout_constraintTop_toTopOf="@+id/sNursePicIV" />

        <TextView
            android:id="@+id/sNurseTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/monthly"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/sNursePicIV"
            app:layout_constraintTop_toBottomOf="@+id/sNurseGenderTV" />

        <TextView
            android:id="@+id/sNurseGenderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/female"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/sNursePicIV"
            app:layout_constraintTop_toBottomOf="@+id/sNurseNameTV" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>