<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Sign In Layout -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/signInCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageIconSiIV"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/imageview"
            android:src="@drawable/ec_p_full"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/signInIV"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/imageview"
            android:scaleType="fitCenter"
            android:src="@drawable/signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageIconSiIV" />

        <EditText
            android:id="@+id/emailSiET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/edittext_round_white"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/email_white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInIV" />

        <EditText
            android:id="@+id/passwordSiET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_round_white"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/key_white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailSiET" />

        <Button
            android:id="@+id/signInBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_style_cyan"
            android:elevation="3dp"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordSiET" />

        <TextView
            android:id="@+id/forgetPasswordTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/forget_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInBTN" />

        <TextView
            android:id="@+id/dontHaveAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switchToSignUpTV"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/switchToSignUpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="4dp"
            android:text="@string/sign_up_b_u"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dontHaveAccountTV" />

    </android.support.constraint.ConstraintLayout>

    <!-- Sign Up Layout -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/signUpCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageIconSuIV"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/imageview"
            android:scaleType="fitCenter"
            android:src="@drawable/ec_p_full"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/signUpIV"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/imageview"
            android:scaleType="fitCenter"
            android:src="@drawable/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageIconSuIV" />

        <EditText
            android:id="@+id/nameSuET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/edittext_round_white"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/person_white"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpIV" />

        <EditText
            android:id="@+id/emailSuET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_round_white"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/email_white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameSuET" />

        <EditText
            android:id="@+id/passwordSuET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_round_white"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/key_white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailSuET" />

        <Button
            android:id="@+id/signUpBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_style_cyan"
            android:elevation="3dp"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordSuET" />

        <TextView
            android:id="@+id/alreadyHaveAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/already_have_account"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switchToSignInTV"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpBTN"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/switchToSignInTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/sign_in_b_u"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/alreadyHaveAccountTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/alreadyHaveAccountTV"
            app:layout_constraintTop_toTopOf="@+id/alreadyHaveAccountTV" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>