<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardElevation="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/doctorPicIV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/imageview"
            android:src="@drawable/noperson"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/doctorNameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:text="@string/doctor_name_sample"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/doctorSpecialistTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/doctorPicIV"
            app:layout_constraintTop_toTopOf="@+id/doctorPicIV" />

        <TextView
            android:id="@+id/doctorSpecialistTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:text="@string/doctor_specialist_sample"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/doctorDegreeTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/doctorPicIV"
            app:layout_constraintTop_toBottomOf="@+id/doctorNameTV" />

        <TextView
            android:id="@+id/doctorDegreeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:text="@string/doctor_degree_sample"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/doctorPicIV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/doctorPicIV"
            app:layout_constraintTop_toBottomOf="@+id/doctorSpecialistTV" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/top_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorPicIV">

            <Button
                android:id="@+id/messageDBTN"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/border_btn"
                android:text="Message"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/profileDBTN"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/border_btn"
                android:text="Profile"
                android:textColor="@color/colorPrimaryDark" />

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>